--- a/src/app/components/weather/weather-tabs/weather-tabs.component.scss
+++ b/src/app/components/weather/weather-tabs/weather-tabs.component.scss
@@ -3,3 +3,8 @@
   top: 6.9em;
   width: calc(100% - 4.25em);
 }
+
+.nav-panel a:hover {
+  color: white;
+  text-decoration: none;
+}
